[package]
name = "mitgen"
version = "1.0.0"
edition = "2021"
authors = ["Graham Keenan <graham.keenan@outlook.com>"]
license = "MIT"
description = "MIT License Generator"
readme = "README.md"
homepage = "https://github.com/Tyrannican/mitgen"
repository = "https://github.com/Tyrannican/mitgen"
keywords = ["cli", "utility", "license", "mit"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
